[gd_scene load_steps=69 format=2]

[ext_resource path="res://LuaDiaNguc.gd" type="Script" id=1]
[ext_resource path="res://DoHoa/Enemy/LuaDiaNguc/luadianguc.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=66]
extents = Vector2( 50.3983, 11.9252 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=126]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=127]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=128]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=129]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=130]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 896, 128, 128 )

[sub_resource type="SpriteFrames" id=131]
animations = [ {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="LuaDiaNguc" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 33.4384, 13.5561 )
shape = SubResource( 66 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.67451 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 131 )
frame = 62
playing = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 50.4401, 0 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 131 )
frame = 34
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 66.538, 0 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 131 )
frame = 6
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.435294 )
position = Vector2( 37.562, 0 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 131 )
frame = 57
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 18.244, 0 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 131 )
frame = 34
playing = true
[connection signal="body_entered" from="." to="." method="_on_LuaDiaNguc_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LuaDiaNguc_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
